[project]
name = "PuLP"
version = "3.1.1"
description = "PuLP is an LP modeler written in python. PuLP can generate MPS or LP files and call GLPK, COIN CLP/CBC, CPLEX, and GUROBI to solve linear problems."
authors = [
    {name = 'J.S. Roy'},
    {name = "S.A. Mitchell", email= "pulp@stuartmitchell.com"},
    {name = "Franco Peschiera", email = "pchtsp@gmail.com"}
]
maintainers= [{name= "Franco Peschiera", email= "pchtsp@gmail.com"}]
dependencies = []
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Mathematics",
]
urls= {source= "https://github.com/coin-or/pulp", download="https://github.com/coin-or/pulp/archive/master.zip"}
keywords=["Optimization", "Linear Programming", "Operations Research"]

[tool.mypy]
exclude = [
    "doc/",
    "examples/",
    "pulp/__init__.py",
    "pulp/apis/",
    "pulp/mps_lp.py",
    "pulp/pulp.py",
    "pulp/solverdir/",
    "pulp/tests/",
    "pulp/utilities.py",
    ".venv/.*",
    "build/",
]

[[tool.mypy.overrides]]
module = [
  "pulp.*",
]
follow_imports = "skip"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black",
    "mypy",
    "pre-commit==2.12.0",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.setuptools]
packages = [
        "pulp",
        "pulp.solverdir",
        "pulp.solverdir.cbc.linux.i32",
        "pulp.solverdir.cbc.linux.i64",
        "pulp.solverdir.cbc.linux.arm64",
        "pulp.solverdir.cbc.win.i32",
        "pulp.solverdir.cbc.win.i64",
        "pulp.solverdir.cbc.osx.i64",
        "pulp.apis",
        "pulp.tests"]
# This is a workaround for https://github.com/astral-sh/uv/issues/9513
license-files = []

[tool.setuptools.package-data]
"pulp.solverdir.cbc.linux.i32"= ["*", "*.*"]
"pulp.solverdir.cbc.linux.i64"= ["*", "*.*"]
"pulp.solverdir.cbc.linux.arm64"= ["*", "*.*"]
"pulp.solverdir.cbc.win.i32"= ["*", "*.*"]
"pulp.solverdir.cbc.win.i64"= ["*", "*.*"]
"pulp.solverdir.cbc.osx.i64"= ["*", "*.*"]

[project.scripts]
pulptest = "pulp.tests.run_tests:pulpTestAll"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '/(\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|_build|buck-out|build|dist)/'

[project.optional-dependencies]
open_py = ["cylp", "highspy", "pyscipopt"]
public_py = ["gurobipy", "coptpy", 'xpress']
