[project]
name = "PuLP"
dynamic = ["version"]
description = "PuLP is an LP modeler written in python. PuLP can generate MPS or LP files and call GLPK, COIN CLP/CBC, CPLEX, and GUROBI to solve linear problems."
authors = [
    {name = 'J.S. Roy'},
    {name = "S.A. Mitchell", email= "pulp@stuartmitchell.com"},
    {name = "Franco Peschiera", email = "pchtsp@gmail.com"}
]
maintainers= [{name= "Franco Peschiera", email= "pchtsp@gmail.com"}]
dependencies = []
requires-python = ">=3.9"
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Mathematics",
]
urls= {source= "https://github.com/coin-or/pulp", download="https://github.com/coin-or/pulp/archive/master.zip"}
keywords=["Optimization", "Linear Programming", "Operations Research"]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "pre-commit==2.12.0",
    "ruff",
    "sphinx",
    "sphinx-rtd-theme",
    "ty",
    "numpy",
]

[tool.setuptools]
packages = [
        "pulp",
        "pulp.solverdir",
        "pulp.solverdir.cbc.linux.i32",
        "pulp.solverdir.cbc.linux.i64",
        "pulp.solverdir.cbc.linux.arm64",
        "pulp.solverdir.cbc.win.i32",
        "pulp.solverdir.cbc.win.i64",
        "pulp.solverdir.cbc.osx.i64",
        "pulp.apis",
        "pulp.tests"]

[tool.setuptools.dynamic]
version = {attr = "pulp.__version__"}

[tool.setuptools.package-data]
"pulp.solverdir.cbc.linux.i32"= ["*", "*.*"]
"pulp.solverdir.cbc.linux.i64"= ["*", "*.*"]
"pulp.solverdir.cbc.linux.arm64"= ["*", "*.*"]
"pulp.solverdir.cbc.win.i32"= ["*", "*.*"]
"pulp.solverdir.cbc.win.i64"= ["*", "*.*"]
"pulp.solverdir.cbc.osx.i64"= ["*", "*.*"]

[tool.maturin]
bindings = "pyo3"
module-name = "pulp._rustcore"
python-packages = ["pulp"]

[project.scripts]
pulptest = "pulp.tests.run_tests:pulpTestAll"

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [".eggs", ".git", ".venv", "_build", "build", "dist", "target"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# N (naming) omitted: ignore naming convention rules
ignore = [
    "E501",   # line length — fix incrementally
    "E402",   # import not at top — used for optional/solver imports
    "F403",   # star import — used by design in pulp/__init__.py
    "F405",   # name from star import — used by design in tests and __init__
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin'",
]


[project.optional-dependencies]
open_py = ["cylp", "highspy", "pyscipopt"]
public_py = ["gurobipy", "coptpy", 'xpress', "cplex; sys_platform != 'darwin' or python_full_version < '3.12'"]
highs = ["highspy"]
scip = ["pyscipopt"]
gurobi = ["gurobipy"]
xpress = ["xpress"]
copt = ["coptpy"]
cplex = ["cplex; sys_platform != 'darwin' or python_full_version < '3.12'"]
mosek = ["mosek"]
