[project]
name = "PuLP"
version = "4.0.0a9"
description = "PuLP is an LP modeler written in python. PuLP can generate MPS or LP files and call GLPK, COIN CLP/CBC, CPLEX, and GUROBI to solve linear problems."
authors = [
    {name = 'J.S. Roy'},
    {name = "S.A. Mitchell", email= "pulp@stuartmitchell.com"},
    {name = "Franco Peschiera", email = "pchtsp@gmail.com"}
]
maintainers= [{name= "Franco Peschiera", email= "pchtsp@gmail.com"}]
dependencies = []
requires-python = ">=3.10"
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Mathematics",
]
urls= {source= "https://github.com/coin-or/pulp", download="https://github.com/coin-or/pulp/archive/master.zip", forum="https://groups.google.com/g/pulp-or-discuss"}
keywords=["Optimization", "Linear Programming", "Operations Research"]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "pre-commit==2.12.0",
    "ruff",
    "sphinx",
    "sphinx-rtd-theme",
    "ty",
    "numpy",
]

[tool.maturin]
bindings = "pyo3"
module-name = "pulp._rustcore"
python-packages = ["pulp"]
manifest-path = "pulp/rust/Cargo.toml"

[project.scripts]
pulptest = "pulp.tests.run_tests:pulpTestAll"

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [".eggs", ".git", ".venv", "_build", "build", "dist", "target"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# N (naming) omitted: ignore naming convention rules
ignore = [
    "E501",   # line length — fix incrementally
    "E402",   # import not at top — used for optional/solver imports
    "F403",   # star import — used by design in pulp/__init__.py
    "F405",   # name from star import — used by design in tests and __init__
]

[tool.ty]
terminal = { error-on-warning = false }
[tool.ty.analysis]
allowed-unresolved-imports = [
    "cbcbox", "cbcbox.**",
    "cylp", "cylp.**",
    "cplex", "cplex.**",
    "cuopt", "cuopt.**",
    "xpress", "xpress.**",
    "gurobipy", "gurobipy.**",
    "ortools", "ortools.**",
    "elementtree.ElementTree", "elementtree.**",
    "yaposib", "yaposib.**",
    "ujson", "ujson.**",
    "glpk.glpkpi", "glpk.**",
    "mosek", "mosek.**",
    "saspy", "saspy.**",
    "swat", "swat.**",
    "coptpy", "coptpy.**",
    "highspy", "highspy.**",
    "pyscipopt", "pyscipopt.**",
]
[tool.ty.rules]
possibly-missing-attribute = "warn"
invalid-method-override = "warn"
unresolved-attribute = "warn"
unused-type-ignore-comment = "warn"
deprecated = "warn"

[[tool.ty.overrides]]
include = ["pulp/apis/*.py"]
[tool.ty.overrides.rules]
unresolved-reference = "warn"

[[tool.ty.overrides]]
include = ["pulp/tests/**"]
[tool.ty.overrides.rules]
unresolved-import = "warn"
unresolved-attribute = "warn"
unresolved-reference = "warn"
invalid-argument-type = "warn"
unsupported-operator = "warn"
no-matching-overload = "warn"
too-many-positional-arguments = "warn"
missing-argument = "warn"
unknown-argument = "warn"
call-non-callable = "warn"
invalid-assignment = "warn"
not-iterable = "warn"

[tool.uv]
required-environments = [
    "sys_platform == 'darwin'",
]


[project.optional-dependencies]
open_py = ["highspy<1.14", "pyscipopt", "cbcbox"]
public_py = ["gurobipy", "coptpy", 'xpress', "cplex; sys_platform != 'darwin' or python_full_version < '3.12'"]
highs = ["highspy<1.14"]
highs_cmd = ["highsbox"]
cbc = ["cbcbox"]
scip = ["pyscipopt"]
gurobi = ["gurobipy"]
xpress = ["xpress"]
copt = ["coptpy"]
cplex = ["cplex; sys_platform != 'darwin' or python_full_version < '3.12'"]
mosek = ["mosek"]
ortools = ["ortools"]
